[workspace]
members = [
    "murasa-core",
    "murasa-engine",
    "murasa-plugins",
    "murasa-cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Murasa Contributors"]

[workspace.dependencies]
ndarray = "0.15"
ndarray-stats = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
geo = "0.28"
geozero = "0.13"
geo-types = "0.7"
gdal = "0.16"
pathdiff = "0.2"
